--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
+body,html {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  min-height: 100%
+}
+
 .App {
   text-align: center;
+  box-sizing: border-box !important;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App-main {
+  min-height: calc(100vh - 40px);
+  background-color: #838c91;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+input,textarea {
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+::placeholder {
+  color: #0000008a;
+  opacity: 1;
+}
+
+::-ms-input-placeholder {
+  color: #0000008a;
 }
